// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary component correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.32
  </h1>
</div>
`;

exports[`should render expenses summary component correctly with many expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $1,047,745.52
  </h1>
</div>
`;
